# enoshima

./: .gitignore  AGENTS.md  DESIGN.md  Makefile  README.md  bootstrap.sh
.codex/: config.toml
.github/: actionlint.yaml
ansible/: ansible.cfg  site.yml
docs/: DESIGN-SKILLS.md  DESKTOP-EXPANSION-OPERATIONS.md  DESKTOP-EXPANSION.md  DESKTOP-UI-CONCEPT.md  DESKTOP-UX-REFERENCES.md  INSTALL.md  SCOPE.md  VM-TESTING.md  WINDOW-DECORATIONS.md  WINDOW-INTERACTION-CONTRACT.md  WORKSTATION.md  ui-surfaces.yaml
home/: dot_gitconfig  dot_zprofile  dot_zshrc  (+3 more)
tests/vm/: README.md  pyproject.toml
tests/vm/fixtures/: electron-qualification.py  titlebar-window.c
tests/vm/fixtures/electron-window/: index.html  main.js  package.json  preload.js
tests/vm/images/: manifest.yaml
tests/vm/scripts/: prepare-boot-security.sh
tests/vm/src/enoshima_vm/: __init__.py  artifacts.py  boot_security.py  cli.py  cloud_init.py  config.py  errors.py  guest.py  image.py  libvirt_backend.py  mcp_server.py  process.py  security.py  service.py  ui_review.py  watchdog.py
tests/vm/suites/: boot-security.yaml  converge.yaml  desktop.yaml  login.yaml  reboot.yaml  smoke.yaml  ui-review.yaml
tests/vm/templates/: domain-desktop.xml.j2  domain-fast.xml.j2  domain-secure-boot.xml.j2  meta-data.j2  network-config.j2  user-data.j2
tests/vm/unit/: test_artifacts.py  test_boot_security.py  test_config.py  test_electron_qualification.py  test_guest.py  test_image.py  test_libvirt_backend.py  test_security.py  test_service.py  test_templates.py  test_ui_review.py  test_watchdog.py
(+736 files in other folders)
